fixed the flexwrap

--- a/introduction/css/flexbox.css
+++ b/introduction/css/flexbox.css
@@ -1,11 +1,14 @@
 .container {
   display: flex;
-  background-color: DodgerBlue;
+  flex-wrap: wrap;
+  background-color: LightBlue;
 }
-
+ 
 .container div {
   background-color: #f1f1f1;
+  width: 100px;
   margin: 10px;
-  padding: 20px;
-  font-size: 24px;
+  padding: 10px;
+  text-align: center;  
+  font-size: 30px;
 }
